--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "@types/node-fetch": "^2.6.2",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
