--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
+  "main": "main/index.js",
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "build": "next build"
+  },
+  "build": {
+    "asar": true,
+    "files": [
+      "main",
+      ".next"
+    ]
   },
   "dependencies": {
     "@tanstack/react-query": "^4.16.0",
@@ -14,10 +22,10 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
-    "@types/node-fetch": "^2.6.2",
+    "axios": "^1.2.0",
     "next": "13.0.2",
     "next-auth": "^4.15.1",
-    "node-fetch": "^3.3.0",
+    "next-electron-server": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -30,12 +38,15 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
+    "electron": "^20.0.0",
+    "electron-builder": "^23.6.0",
     "eslint": "^8.26.0",
     "eslint-config-next": "13.0.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
